@@ -1,3 +1,6 @@
+from AccessControl.SecurityManagement import newSecurityManager
+from AccessControl.SpecialUsers import nobody
+from AccessControl.SpecialUsers import system
 from ftw.tabbedview.interfaces import ITabbedView
 from ftw.tabbedview.testing import ZCML_LAYER
 from ftw.testing import MockTestCase
@@ -20,6 +23,10 @@ class TestTabbedviewConfigView(MockTestCase):
         self.context = self.stub()
         self.request = self.stub_request()
 
+    def tearDown(self):
+        super(TestTabbedviewConfigView, self).tearDown()
+        newSecurityManager(None, nobody)
+
     def test_component_registered(self):
         self.replay()
 
@@ -40,6 +47,18 @@ class TestTabbedviewConfigView(MockTestCase):
 
         self.replay()
 
+        newSecurityManager(None, system)
+        view = queryMultiAdapter((self.context, self.request),
+                                 name='tabbedview_config')
+        self.assertEqual(view.extjs_enabled(), True)
+
+    def test_extjs_anonymous_disabled(self):
+        key = 'ftw.tabbedview.interfaces.ITabbedView.extjs_enabled'
+        self.registry[key] = True
+
+        self.replay()
+
+        newSecurityManager(None, nobody)
         view = queryMultiAdapter((self.context, self.request),
                                  name='tabbedview_config')
         self.assertEqual(view.extjs_enabled(), True)
